--- a/src/app/styles/one-wizard.scss
+++ b/src/app/styles/one-wizard.scss
@@ -1,7 +1,13 @@
+$steps-row-height: 100px;
+$steps-height: 80px;
+
 .one-wizard {
-    .steps-row {
-        @media (max-width:$screen-sm-max) {
-            display: none;
-        }
-    }
+  .steps-row {
+    height: $steps-row-height;
+    padding: 0;
+    padding-top: ($steps-row-height - $steps-height - ($content-col-padding / 2)) / 2;
+  }
+  .content-info .world-map {
+    top: $steps-row-height + $content-col-padding;
+  }
 }
